# minimal_egl_glad

./: CMakeLists.txt  README.md
glad/include/glad/: glad.h
glad/src/: glad.c
src/: main.cpp
